# Copyright 2020 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//common-mk/pkg_config.gni")

nn_src = "//aosp/frameworks/ml"
vts_src = "//aosp/hardware/interfaces/neuralnetworks"

group("all") {
  deps = [
    ":vts",
    ":cts",
  ]
}

group("vts") {
  deps = [
    ":cros_nnapi_vts_1_0",
    ":cros_nnapi_vts_1_1",
    ":cros_nnapi_vts_1_2",
    ":cros_nnapi_vts_1_3",
  ]
}

group("cts") {
  deps = [
    ":cros_nnapi_cts",
  ]
}

pkg_config("vts_defaults") {
  include_dirs = [
    "${vts_src}/1.0/vts/functional/include",
    "${nn_src}/common/include",
    "${nn_src}/common/include/nnapi",
    "${nn_src}/common/types/include/nnapi",
    "${nn_src}/common/types/include",
    "${nn_src}/runtime",
    "${nn_src}/runtime/include",
    "${nn_src}/tools/test_generator/test_harness/include",
    "${sysroot}/usr/include/aosp",
    "//aosp/hardware/interfaces/neuralnetworks/1.0/utils/include/",
    "//aosp/hardware/interfaces/neuralnetworks/1.1/utils/include/",
    "//aosp/hardware/interfaces/neuralnetworks/1.2/utils/include/",
    "//aosp/hardware/interfaces/neuralnetworks/1.3/utils/include/",
    "//aosp/hardware/interfaces/neuralnetworks/utils/common/include/"
  ]
  pkg_deps = [
    "libnnapi-support",
  ]
}

static_library("vts_common") {
  configs += [
    ":vts_defaults",
    "//aosp/frameworks/ml:target_defaults",
    "//common-mk:test",
  ]
  cflags_cc = [
    # ExecutionBurstController has signed vs unsigned compares
    "-Wno-sign-compare",
    # Utils.cpp has unused parameters
    "-Wno-unused-parameter",
  ]
  deps = [
    "${nn_src}:nn-common",
    "${nn_src}:runtime",
    "${nn_src}:utils_common",
    "${nn_src}:utils_1_0",
    "${nn_src}:utils_1_1",
    "${nn_src}:utils_1_2",
    "${nn_src}:utils_1_3",
    "${nn_src}:vendor-nn-hal",
  ]
  sources = [
    "${vts_src}/1.0/vts/functional/Callbacks.cpp",
    "${vts_src}/1.0/vts/functional/Utils.cpp",
    "${nn_src}/chromeos/logger.cpp",
    "${nn_src}/chromeos/compilation_caching.cpp",
    "${nn_src}/chromeos/daemon_store.cpp",
    "${nn_src}/chromeos/testrunner.cpp",
    "${nn_src}/chromeos/testrunner_messageloop.cpp",
    "${nn_src}/chromeos/driver_loader.cpp",
    "${nn_src}/chromeos/driver_loader_utils.cpp",
    "${nn_src}/common/ExecutionBurstController.cpp",
    "${nn_src}/common/ExecutionBurstServer.cpp",
    "${nn_src}/common/LegacyHalUtils.cpp",
    "${nn_src}/common/LegacyUtils.cpp",
    "${nn_src}/common/MemoryUtils.cpp",
    "${nn_src}/common/types/src/SharedMemoryAndroid.cpp",
    "${nn_src}/common/types/src/TypeUtils.cpp",
    "${nn_src}/common/types/src/Types.cpp",
    "${nn_src}/common/types/src/Validation.cpp",
    "${nn_src}/tools/test_generator/test_harness/TestHarness.cpp",
  ]
}

executable("cros_nnapi_vts_1_0") {
  configs += [
    ":vts_defaults",
    "//aosp/frameworks/ml:target_defaults",
  ]
  deps = [
    ":vts_common",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_0",
  ]
  sources = [
    "${vts_src}/1.0/vts/functional/BasicTests.cpp",
    "${vts_src}/1.0/vts/functional/GeneratedTestHarness.cpp",
    "${vts_src}/1.0/vts/functional/TestAssertions.cpp",
    "${vts_src}/1.0/vts/functional/ValidateModel.cpp",
    "${vts_src}/1.0/vts/functional/ValidateRequest.cpp",
    "${vts_src}/1.0/vts/functional/VtsHalNeuralnetworks.cpp",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_0.cc",
  ]
}

executable("cros_nnapi_vts_1_1") {
  include_dirs = [
    "${vts_src}/1.1/vts/functional/include",
  ]
  configs += [
    ":vts_defaults",
    "//aosp/frameworks/ml:target_defaults",
  ]
  deps = [
    ":vts_common",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_0",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_1",
  ]
  sources = [
    "${vts_src}/1.1/vts/functional/BasicTests.cpp",
    "${vts_src}/1.1/vts/functional/GeneratedTestHarness.cpp",
    "${vts_src}/1.1/vts/functional/TestAssertions.cpp",
    "${vts_src}/1.1/vts/functional/ValidateModel.cpp",
    "${vts_src}/1.1/vts/functional/ValidateRequest.cpp",
    "${vts_src}/1.1/vts/functional/VtsHalNeuralnetworks.cpp",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_0.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_1.cc",
  ]
}

executable("cros_nnapi_vts_1_2") {
  include_dirs = [
    "${vts_src}/1.2/vts/functional/include",
  ]
  configs += [
    ":vts_defaults",
    "//aosp/frameworks/ml:target_defaults",
  ]
  deps = [
    ":vts_common",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_0",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_1",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_2",
  ]
  sources = [
    "${vts_src}/1.2/vts/functional/BasicTests.cpp",
    "${vts_src}/1.2/vts/functional/Callbacks.cpp",
    "${vts_src}/1.2/vts/functional/CompilationCachingTests.cpp",
    "${vts_src}/1.2/vts/functional/GeneratedTestHarness.cpp",
    "${vts_src}/1.2/vts/functional/TestAssertions.cpp",
    "${vts_src}/1.2/vts/functional/Utils.cpp",
    "${vts_src}/1.2/vts/functional/ValidateBurst.cpp",
    "${vts_src}/1.2/vts/functional/ValidateModel.cpp",
    "${vts_src}/1.2/vts/functional/ValidateRequest.cpp",
    "${vts_src}/1.2/vts/functional/VtsHalNeuralnetworks.cpp",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_0.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_1.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_2.cc",
  ]
}

executable("cros_nnapi_vts_1_3") {
  include_dirs = [
    "${vts_src}/1.2/vts/functional/include",
    "${vts_src}/1.3/vts/functional/include",
  ]
  configs += [
    ":vts_defaults",
    "//aosp/frameworks/ml:target_defaults",
  ]
  deps = [
    ":vts_common",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_0",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_1",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_2",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_3",
  ]
  sources = [
    "${vts_src}/1.3/vts/functional/BasicTests.cpp",
    "${vts_src}/1.3/vts/functional/Callbacks.cpp",
    "${vts_src}/1.3/vts/functional/CompilationCachingTests.cpp",
    "${vts_src}/1.3/vts/functional/GeneratedTestHarness.cpp",
    "${vts_src}/1.3/vts/functional/MemoryDomainTests.cpp",
    "${vts_src}/1.3/vts/functional/QualityOfServiceTests.cpp",
    "${vts_src}/1.3/vts/functional/TestAssertions.cpp",
    "${vts_src}/1.3/vts/functional/Utils.cpp",
    "${vts_src}/1.3/vts/functional/ValidateBurst.cpp",
    "${vts_src}/1.3/vts/functional/ValidateModel.cpp",
    "${vts_src}/1.3/vts/functional/ValidateRequest.cpp",
    "${vts_src}/1.3/vts/functional/VtsHalNeuralnetworks.cpp",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_0.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_1.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_2.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_3.cc",
  ]
}

executable("cros_nnapi_cts") {
  configs += [
    "//aosp/frameworks/ml:disable_ndebug",
    "//aosp/frameworks/ml:target_defaults",
    "//common-mk:test",
  ]
  cflags_cc = [
    "-Wno-sign-compare",
    "-Wno-unused-parameter",
  ]
  defines = [
    "NNTEST_CTS",
    "NNTEST_ONLY_PUBLIC_API",
  ]
  deps = [
    "${nn_src}:libneuralnetworks",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_0",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_1",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_2",
    "${nn_src}/chromeos/tests/runtime/generated:generated_spec_v1_3",
  ]
  include_dirs = [
    "${nn_src}/common",
    "${nn_src}/common/include",
    "${nn_src}/common/types/include",
    "${nn_src}/runtime/include",
    "${nn_src}/runtime/test",
    "${nn_src}/tools/test_generator/test_harness/include",
    "${sysroot}/usr/include/aosp",
  ]
  sources = [
    "${nn_src}/chromeos/logger.cpp",
    "${nn_src}/chromeos/testrunner.cpp",
    "${nn_src}/chromeos/testrunner_messageloop.cpp",
    "${nn_src}/runtime/test/GeneratedTestUtils.cpp",
    "${nn_src}/runtime/test/RequireDebug.cpp",
    "${nn_src}/runtime/test/TestControlFlow.cpp",
    "${nn_src}/runtime/test/TestFree.cpp",
    "${nn_src}/runtime/test/TestGenerated.cpp",
    "${nn_src}/runtime/test/TestMemory.cpp",
    "${nn_src}/runtime/test/TestNeuralNetworksWrapper.cpp",
    "${nn_src}/runtime/test/TestTrivialModel.cpp",
    "${nn_src}/runtime/test/TestUnknownDimensions.cpp",
    "${nn_src}/runtime/test/TestValidateModel.cpp",
    "${nn_src}/runtime/test/TestValidateOperations.cpp",
    "${nn_src}/runtime/test/TestValidation.cpp",
    "${nn_src}/runtime/test/TestWrapper.cpp",
    "${nn_src}/runtime/test/fuzzing/OperationManager.cpp",
    "${nn_src}/runtime/test/fuzzing/RandomGraphGenerator.cpp",
    "${nn_src}/runtime/test/fuzzing/RandomGraphGeneratorUtils.cpp",
    "${nn_src}/runtime/test/fuzzing/RandomVariable.cpp",
    "${nn_src}/runtime/test/fuzzing/TestRandomGraph.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/BoundingBox.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/Broadcast.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/ConcatSplit.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/Convolutions.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/Elementwise.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/FullyConnected.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/Normalization.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/Poolings.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/Reduce.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/Reshape.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/Resize.cpp",
    "${nn_src}/runtime/test/fuzzing/operation_signatures/Selection.cpp",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_0.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_1.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_2.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_3.cc",
    "${nn_src}/chromeos/tests/runtime/generated_test_loader_V1_3_cts.cc",
    "${nn_src}/tools/test_generator/test_harness/TestHarness.cpp",
  ]
}
